--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-tracker": "^0.0.8",
+    "token-transformer": "^0.0.33",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
